Update build.gradle for Spring Boot 3.3.5 and Java compatibility to version 23; add MANIFEST files; refactor Student class to handle empty grades; remove unused workspace and .gitignore entries.